--- a/Federal Taphouse/Base.lproj/Main.storyboard
+++ b/Federal Taphouse/Base.lproj/Main.storyboard
@@ -107,7 +107,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-439" y="1001"/>
+            <point key="canvasLocation" x="-501" y="871"/>
         </scene>
         <!--Reveal View Controller-->
         <scene sceneID="Z4H-sh-cbS">
@@ -344,8 +344,22 @@
                     <view key="view" contentMode="scaleToFill" id="Wfk-6x-Z3z">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="N9N-fC-cpC">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                            </mapView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="N9N-fC-cpC" firstAttribute="leading" secondItem="Wfk-6x-Z3z" secondAttribute="leading" id="NTq-4V-nAg"/>
+                            <constraint firstAttribute="trailing" secondItem="N9N-fC-cpC" secondAttribute="trailing" id="VQ5-N0-DUf"/>
+                            <constraint firstItem="N9N-fC-cpC" firstAttribute="bottom" secondItem="yso-Cv-Yya" secondAttribute="top" id="XMK-Qn-vAs"/>
+                            <constraint firstItem="N9N-fC-cpC" firstAttribute="top" secondItem="Wfk-6x-Z3z" secondAttribute="top" id="kra-eI-f38"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="mapView" destination="N9N-fC-cpC" id="u87-QG-dwh"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ZH2-kx-QkU" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -356,6 +370,6 @@
         <image name="fed.png" width="978" height="499"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="UXE-fW-Zsf"/>
+        <segue reference="Qgx-n7-DgE"/>
     </inferredMetricsTieBreakers>
 </document>
